--- a/lab7/css/lab.css
+++ b/lab7/css/lab.css
@@ -21,9 +21,13 @@ div#lab7_image {
   float: right;
 }
 
-div#paragraphs {
+.summary_of_efforts {
   margin: 10px;
   padding: 1px 10px;
   background-color: lightblue;
   color: #1a3d50;
+}
+
+a {
+    color: #1a3d50;
 }
