Lab 9-changed CSS of lab 2 to site.css

--- a/css/site.css
+++ b/css/site.css
@@ -36,6 +36,15 @@ img {
   border: double 5px white;
 }
 
+section {
+  margin: 10px;
+  padding: 1px 10px;
+  background-color:rgba(255,255,255,0.5);
+  border: double 5px white;
+  color: #633242;
+  font-family: "Garamond", serif;
+}
+
 a {
     color:#633242;
 }
