--- a/css/site.css
+++ b/css/site.css
@@ -22,9 +22,17 @@ h1,article,nav {
 }
 
 h1,h2 {
-  width: 50%;
-  margin: auto;
-  text-align: center;
+  font-size: 2em;
+  text-transform: capitalize;
+  letter-spacing: 8px;
+  font-family: 'Cormorant SC', serif;
+}
+
+h1 {
+    font-size: 2.5em;
+    text-align: center;
+    width: 50%;
+    margin: auto;
 }
 
 img {
@@ -47,4 +55,6 @@ section {
 
 a {
     color:#633242;
+    text-transform: uppercase;
+    text-decoration: none;
 }
